# MGP-QDB

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
apps/: main.py  utils.py
apps/app_configs/: api_settings.py  mappings.py
apps/configs/: mappings.py
apps/io_schema/: request_models.py
apps/pages/: add_questions.py  delete_questions.py  search_questions.py  update_questions.py
apps/processors/: authenticate.py  utils.py
data_functions/: db_connectors.py
