[tool.poetry]
name = "MGP-QDB"
version = "0.1.0"
description = ""
authors = ["cosamosart <cosmosart@msn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
authlib = "^1.5.2"
httpx = "^0.28.1"
pydantic = "^2.11.4"
streamlit = "^1.45.1"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"