[tool.poetry]
name = "miraibo_api"
version = "0.2.0"
description = "A lightweight API for managing and interacting with Miraibo services."
authors = ["Eli Lee Kitagawa <cosmosart@msn.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.45.1"
authlib = "^1.5.2"
httpx = "^0.28.1"
pydantic = "^2.11.4"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"